--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -88,7 +88,7 @@
 <!-- main -->
 <main class="maintienda">
 <h1><strong>Hardware</strong></h1>
-<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/discoduro1.png" class="card-img-top" alt="discoduro">
         <div class="card-body">
@@ -116,7 +116,7 @@
         </div>
     </div>
 </div>
-<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/ssd.png" class="card-img-top" alt="ssd">
         <div class="card-body">
