--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -88,7 +88,7 @@
 <!-- main -->
 <main class="maintienda">
 <h1><strong>monitores</strong></h1>
-<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/monitor.png" class="card-img-top" alt="monitor">
         <div class="card-body">
@@ -120,7 +120,7 @@
         </div>
     </div>
 </div>
-<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/monitoraorus.webp" class="card-img-top" alt="monitor">
         <div class="card-body">
