--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -94,7 +94,7 @@
     <!-- cards de productos -->
     <main class="maintienda">
         <h1><strong> Productos</strong></h1>
-        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
             <div class="card cardimg colorcard" style="width: 18rem;">
                 <img src="../img/gabinete.png" class="card-img-top" alt="gabinete">
                 <div class="card-body">
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
             <div class="card colorcard" style="width: 18rem;">
                 <img src="../img/tecladoredragon.png" class="card-img-top" alt="teclado">
                 <div class="card-body">
@@ -178,7 +178,7 @@
                 </div>
             </div>
         </div>
-        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
             <div class="card colorcard" style="width: 18rem;">
                 <img src="../img/gabineteaorus.png" class="card-img-top" alt="gab">
                 <div class="card-body">
