--- a/pages/perifericos.html
+++ b/pages/perifericos.html
@@ -88,7 +88,7 @@
 <!-- main -->
 <main class="maintienda">
 <h1><strong>Perifericos</strong></h1>
-<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/joystick.webp" class="card-img-top" alt="joystick">
         <div class="card-body">
@@ -116,7 +116,7 @@
         </div>
     </div>
 </div>
-<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+<div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
     <div class="card cardimg colorcard" style="width: 18rem;">
         <img src="../img/teclado.png" class="card-img-top" alt="teclado">
         <div class="card-body">
