--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -152,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12">
+        <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
             <div class="card colorcard" style="width: 18rem;">
                 <img src="../img/mousehyperx.png" class="card-img-top" alt="teclado">
                 <div class="card-body">
