--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
         <div class="card-body">
           <h5 class="card-title">Gabinete</h5>
           <p class="card-text">Compatible Con: Mothers Mini-Atx / Micro Atx / Incluye: Controladora Rgb + Control Remoto</p>
-          <a href="#" class="btn btn-primary">COMPRAR</a>
+          <a href="./pages/carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
       </div><div class="card colorcard" style="width: 18rem;">
         <img src="./img/auriculares.png" class="card-img-top " alt="auriculares">
         <div class="card-body">
           <h5 class="card-title">auriculares logitech</h5>
           <p class="card-text">Puerto USB 2.0 (puerto tipo A) PC con Windows® 7 o posteriores, macOS X 10.12 o posteriores</p>
-          <a href="#" class="btn btn-primary">COMPRAR</a>
+          <a href="./pages/carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
       </div><div class="card colorcard" style="width: 18rem;">
         <img src="./img/monitor.png" class="card-img-top" alt="monitor">
         <div class="card-body">
           <h5 class="card-title">Monitor samsung</h5>
           <p class="card-text">Alto: 39.6.  Ancho: 48.8.  Color: NEGRO.  Brillo: 250.  Formato de pantalla: WIDESCREEN 16:9.  Frecuencia Horz.: 60.</p>
-          <a href="#" class="btn btn-primary">COMPRAR</a>
+          <a href="./pages/carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
       </div>
     </div>
@@ -122,25 +122,27 @@
         <div class="card-body">
           <h5 class="card-title">Teclado redragon</h5>
           <p class="card-text">Tipo Teclado: Mecánicos Tipo Switch: Redragon, táctil con click audible. Teclas Multimedia: Si, a tráves de tecla FN </p>
-          <a href="#" class="btn btn-primary">COMPRAR</a>
+          <a href="./pages/carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
       </div><div class="card colorcard" style="width: 18rem;">
         <img src="./img/placavideo.png" class="card-img-top" alt="placa de video">
         <div class="card-body">
           <h5 class="card-title">placa de video gtx 1650</h5>
           <p class="card-text">Tipo de memoria: GDDR6 Capacidad de memoria: 4GB Conectividad: HDMI 1, DVI 1, DisplayPort 1</p>
-          <a href="#" class="btn btn-primary">COMPRAR</a>
+          <a href="./pages/carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
       </div><div class="card colorcard" style="width: 18rem;">
         <img src="./img/mouse pad hyperx.png" class="card-img-top" alt="mousepad">
         <div class="card-body">
           <h5 class="card-title">mouse pad</h5>
           <p class="card-text">Tamaño: 210 x 250 mm Grosor: 3 mm Tipo Deslizamiento: Speed, optimizado para todos los sensores</p>
-          <a href="#" class="btn btn-primary">COMPRAR</a>
+          <a href="./pages/carritocompra.html" class="btn btn-primary">COMPRAR</a>
         </div>
       </div>
     </div>
-    
+    <div class="text-center vermas">
+      <button type="button" class="btn btn-primary btn-sm ">Ver mas</button>
+  </div>   
 </main>
 
 <!-- footer -->
