--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -101,7 +101,7 @@
                     <h5 class="card-title">Gabinete</h5>
                     <p class="card-text">Compatible Con: Mothers Mini-Atx / Micro Atx / Incluye: Controladora Rgb +
                         Control Remoto</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -110,7 +110,7 @@
                     <h5 class="card-title">auriculares logitech</h5>
                     <p class="card-text">Puerto USB 2.0 (puerto tipo A) PC con Windows® 7 o posteriores, macOS X 10.12 o
                         posteriores</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -119,7 +119,7 @@
                     <h5 class="card-title">Monitor samsung</h5>
                     <p class="card-text">Alto: 39.6. Ancho: 48.8. Color: NEGRO. Brillo: 250. Formato de pantalla:
                         WIDESCREEN 16:9. Frecuencia Horz.: 60.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                     <h5 class="card-title">Teclado redragon</h5>
                     <p class="card-text">Tipo Teclado: Mecánicos Tipo Switch: Redragon, táctil con click audible. Teclas
                         Multimedia: Si, a tráves de tecla FN </p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -139,7 +139,7 @@
                     <h5 class="card-title">placa de video gtx 1650</h5>
                     <p class="card-text">Tipo de memoria: GDDR6 Capacidad de memoria: 4GB Conectividad: HDMI 1, DVI 1,
                         DisplayPort 1</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -148,7 +148,7 @@
                     <h5 class="card-title">mouse pad</h5>
                     <p class="card-text">Tamaño: 210 x 250 mm Grosor: 3 mm Tipo Deslizamiento: Speed, optimizado para
                         todos los sensores</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
         </div>
@@ -158,7 +158,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Mouse hyperx</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -166,7 +166,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Monitor aorus</h5>
                     <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe nam corporis alias.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -174,7 +174,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Mouse redragon</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, tempora!</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
         </div>
@@ -184,7 +184,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Gabinete aorus</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, aperiam.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -192,7 +192,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Auriculares redragon</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, et.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
             <div class="card colorcard" style="width: 18rem;">
@@ -200,12 +200,13 @@
                 <div class="card-body">
                     <h5 class="card-title">Monitor redragon</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, doloremque.</p>
-                    <a href="#" class="btn btn-primary">COMPRAR</a>
+                    <a href="./carritocompra.html" class="btn btn-primary">COMPRAR</a>
                 </div>
             </div>
         </div>
-        
-                           
+        <div class="text-center vermas">
+        <button type="button" class="btn btn-primary btn-sm ">Ver mas</button>
+    </div>             
     </main>
 
 
