--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -155,6 +155,9 @@
         </div>
     </div>
 </div>
+<div class="text-center vermas">
+    <button type="button" class="btn btn-primary btn-sm ">Ver mas</button>
+</div>   
 </main>
 
 
