--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                       <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./pages/tienda.html">Tienda</a>
+                      <a class="nav-link" href="./pages/ofertas.html">Ofertas</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./pages/reclamosdudas.html">Reclamos-Dudas</a>
@@ -156,10 +156,10 @@
     <div class="col-xs-12 col-md-6 col-lg-3">
         <p class="h5 mb-3">Enlaces</p>
         <div class="mb-2">
-            <a href="./pages/terminos-condiciones.html" class=" text-decoration-none text-secondary">terminos y condiciones</a>
+            <a href="./pages/terminos-condiciones.html" class=" text-decoration-none text-secondary">Terminos y Condiciones</a>
         </div>
         <div class="mb-2">
-            <a href="./pages/privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
+            <a href="./pages/privacidad-politica.html" class=" text-decoration-none text-secondary">Privacidad y Politica</a>
         </div>
         <div class="mb-2">
             <a href="./pages/reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
@@ -171,10 +171,10 @@
             <a href="#" class=" text-decoration-none text-secondary">Instragram</a>
         </div>
         <div class="mb-2">
-            <a href="#" class=" text-decoration-none text-secondary">facebook</a>
+            <a href="#" class=" text-decoration-none text-secondary">Facebook</a>
         </div>
         <div class="mb-2">
-            <a href="#" class=" text-decoration-none text-secondary">whatsapp</a>
+            <a href="#" class=" text-decoration-none text-secondary">Whatsapp</a>
         </div>
     </div>
 </div>
