--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                            <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
@@ -91,7 +91,13 @@
     <!-- main -->
     <main class="mainnosotros">
     <h1><strong> Sobre nosotros</strong></h1>
-    <p class="sobrenosotros">Nos fundamos en el 2003,estamos ubicados en <span> Av. Dr. Honorio Pueyrredón 1841</span>,Buenos Aires,<span> nuestros horarios son de 08:00AM hasta las 18:00PM los dias de semana,y los fin de semanas cerrado </span>, no contamos un local fisico, es decir, contamos con un almacen fisico para guardar las cosas pero al que no pueden ir a comprar, las compras son solo via internet. Desde ya, muchas gracias por su confianza.</p>
+    <p class="sobrenosotros">Nuestra empresa se fundó en 2003 y nos convertimos en referentes en el rubro en Argentina y Sudamérica. Somos expertos en asesoramiento y venta de productos relacionados al gammer.
+        Nuestra atención es vía internet y respondemos en línea de 08 a 18hs de lunes a viernes. El depósito de nuestros productos está ubicado en Av. Dr. Honorio Pueyrredón 1841, ciudad de Buenos Aires, Argentina.
+        Trabajamos con empre de Transporte Andreani para enviar nuestros productos. También con opción de poder retirarlos en nuestro depósito. 
+        Todos los productos que comercializamos tienen garantía de un año, con posibilidad de garantía extendida.
+        Somos apasionados por brindar un excelente servicio y facilitar a nuestros clientes las adquisidores de lo último en tecnologías.
+        Te invitamos a navegar en nuestra web.
+        </p>
 
 
 <div class="text-center">
@@ -131,10 +137,10 @@
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="h5 mb-3">Enlaces</p>
                     <div class="mb-2">
-                        <a href="./terminos-condiciones.html" class=" text-decoration-none text-secondary">terminos y condiciones</a>
+                        <a href="./terminos-condiciones.html" class=" text-decoration-none text-secondary">Terminos y Condiciones</a>
                     </div>
                     <div class="mb-2">
-                        <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
+                        <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">Privacidad y Politica</a>
                     </div>
                     <div class="mb-2">
                         <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
@@ -147,10 +153,10 @@
                     </div>
                     
                     <div class="mb-2">
-                        <a href="#" class=" text-decoration-none text-secondary">facebook</a>
+                        <a href="#" class=" text-decoration-none text-secondary">Facebook</a>
                     </div>
                     <div class="mb-2">
-                        <a href="#" class=" text-decoration-none text-secondary">whatsapp</a>
+                        <a href="#" class=" text-decoration-none text-secondary">Whatsapp</a>
                     </div>
                 </div>
             </div>
