--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                            <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
@@ -93,7 +93,7 @@
     <!-- main -->
     <!-- cards de productos -->
     <main class="maintienda">
-        <h1><strong> Productos</strong></h1>
+        <h1><strong> Ofertas</strong></h1>
         <div class="row cardsstyle col-md-12 col-lg-12 col-xl-12 tamaniocard">
             <div class="card cardimg colorcard" style="width: 18rem;">
                 <img src="../img/gabinete.png" class="card-img-top" alt="gabinete">
@@ -226,10 +226,10 @@
                 <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="h5 mb-3">Enlaces</p>
                     <div class="mb-2">
-                        <a href="./terminos-condiciones.html" class=" text-decoration-none text-secondary">terminos y condiciones</a>
+                        <a href="./terminos-condiciones.html" class=" text-decoration-none text-secondary">Terminos y Condiciones</a>
                     </div>
                     <div class="mb-2">
-                        <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">privacidad y politica</a>
+                        <a href="./privacidad-politica.html" class=" text-decoration-none text-secondary">Privacidad y Politica</a>
                     </div>
                     <div class="mb-2">
                         <a href="./reclamosdudas.html" class=" text-decoration-none text-secondary">Reclamos-Dudas</a>
@@ -241,10 +241,10 @@
                         <a href="#" class=" text-decoration-none text-secondary">Instragram</a>
                     </div>
                     <div class="mb-2">
-                        <a href="#" class=" text-decoration-none text-secondary">facebook</a>
+                        <a href="#" class=" text-decoration-none text-secondary">Facebook</a>
                     </div>
                     <div class="mb-2">
-                        <a href="#" class=" text-decoration-none text-secondary">whatsapp</a>
+                        <a href="#" class=" text-decoration-none text-secondary">Whatsapp</a>
                     </div>
                 </div>
             </div>
