--- a/pages/privacidad-politica.html
+++ b/pages/privacidad-politica.html
@@ -26,13 +26,13 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./terminos-condiciones.html">Terminos y condiciones</a></li>
+            <li><a href="./terminos-condiciones.html">Terminos y Condiciones</a></li>
         </ul>
         </nav>
     </header>
     <!-- main -->
     <main class="mainlegal">
-        <h1><strong>Privacidad y politica</strong></h1>
+        <h1><strong>Privacidad y Politica</strong></h1>
         <div class="plegal">
         <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet fuga, architecto provident
             perspiciatis quia impedit doloremque aliquid tenetur quibusdam. Distinctio iste earum eligendi facere minus
