--- a/pages/carritocompra.html
+++ b/pages/carritocompra.html
@@ -39,7 +39,7 @@
                       <a class="nav-link" href="./nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./tienda.html">Tienda</a>
+                      <a class="nav-link" href="./ofertas.html">Ofertas</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./reclamosdudas.html">Reclamos-Dudas</a>
